# fingerprint_recognition

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/fingerprint/: enhancement.hpp  features.hpp
include/fingerprint/core/: frequency.hpp  gabor.hpp  minutiae.hpp  orientation.hpp  pruning.hpp  roi.hpp  skeleton.hpp  types.hpp  utility.hpp
include/fingerprint/enhancement/: enhancement.hpp  params.hpp
include/fingerprint/features/: description.hpp  detection.hpp  matching.hpp  mcc.hpp
src/: enhancement.cpp  features.cpp  main.cpp
src/core/: frequency.cpp  gabor.cpp  minutiae.cpp  orientation.cpp  pruning.cpp  roi.cpp  skeleton.cpp  utility.cpp
src/enhancement/: enhancement.cpp
src/features/: detection.cpp  mcc.cpp  minutiae.cpp
test/: CMakeLists.txt  eval.cpp
